# CustomUser

./: README.md  manage.py  pyproject.toml
accounts/: admin.py  forms.py  htmx_views.py  managers.py  models.py  tokens.py  urls.py  validators.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/: change_password.html  confirm_password_reset.html  login.html  password_reset.html  register.html  verification_sent.html
appone/: views.py
appone/templates/: home.html
core/: urls.py
core/settings/: base.py
core/templates/: base.html
core/templates/partials/htmx_components/: check_email.html
