[tool.poetry]
name = "customuser"
version = "0.1.0"
description = "Customization of Django’s Users"
authors = ["AlekysCoelho <alekyscoelho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"


[tool.poetry.group.dev.dependencies]
python-decouple = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
